# OOP_MAI

./: CMakeLists.txt  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
include/: figure.h  figurearray.h  function.h  money.hpp  rectangle.h  square.h  trapezoid.h
src/: figure.cpp  figurearray.cpp  function.cpp  function.h  main.cpp  money.cpp  rectangle.cpp  square.cpp  trapezoid.cpp
tests/: class_test.cpp  function_test.cpp  test.cpp
